--- a/front/html/main.html
+++ b/front/html/main.html
@@ -6,6 +6,29 @@
 	<script src="front/assets/js/server.js" type="text/javascript"></script>
 </div>
 
+<script>
+    var Go_ = {};
+    // var map;
+    function initMap() {
+        // The location of Uluru
+        var uluru = {lat: -25.3, lng: 131.04};
+        // The map, centered at Uluru
+        Go_.map = new google.maps.Map(document.getElementById('map'), {
+            center: uluru,
+            zoom: 3,
+            disableDefaultUI: true
+        });
+        navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude
+            };
+            Go_.map.setCenter(pos);
+            Go_.map.setZoom(13);
+        });
+    };
+</script>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
 
 <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"></div>
