--- a/front/html/main.html
+++ b/front/html/main.html
@@ -6,7 +6,6 @@
 	<script src="front/assets/js/server.js" type="text/javascript"></script>
 </div>
 
-<<<<<<< HEAD
 <!-- <script>
     var Go_ = {};
     // var map;
@@ -30,13 +29,11 @@
     };
 </script> -->
 
-=======
->>>>>>> 28842595e56f524700bb9e8372fee674e2c262ad
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiHlQx_PBCT7CqT5MvtKdA9qX0Dihpz48&callback=initMap"async defer></script>
 
 <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"></div>
 
-<div class="filters ">
+<!-- <div class="filters ">
 	<div class="select-type">
 		<div class="input-group mb-3">
 			<select class="custom-select" id="inputGroupSelect01">
@@ -46,11 +43,5 @@
 				<option value="3">Three</option>
 			</select>
 		</div>
-	</div>
-
-	<div class="map-filter">
-		<button id="draw" type="button" class="btn btn-primary">Driwe on map</button>
-		<button id="clear" class="hide visible btn btn-danger">Clear</button>
-	</div>
-	
-</div>
+	</div>	
+</div> -->
