--- a/front/html/main.html
+++ b/front/html/main.html
@@ -36,7 +36,10 @@ function initMap() {
 Go.map = new google.maps.Map(document.getElementById('map'), {
     center: {lat: 47.4979, lng: 19.0402},
     zoom: 15,
-    disableDefaultUI: true
+    disableDefaultUI: true,
+    options: {
+        gestureHandling: 'greedy'
+    }
 });
 };</script>
 
